[project]
name = "irve-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-storage-file-datalake>=12.23.0",
    "commitizen>=4.10.0",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "pre-commit>=4.5.0",
    "requests>=2.32.5",
    "snowflake-connector-python>=4.2.0",
]
